fixed image cropping on product page, removed console.log statement

--- a/src/scss/product-page.scss
+++ b/src/scss/product-page.scss
@@ -4,9 +4,12 @@
   .product-image {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #ddd;
+    height: 400px;
     img {
-      max-height: 400px;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .product-name {
